# geicar

./: .gitignore  README.md  README_JUST_AFTER_README.md
general/: how_to_use.md
general/hardware/: hardware_architecture.drawio
jetsonNano/: README.md  configure.sh  install.sh
jetsonNano/ros2_ws/: map_1670498406.yaml
jetsonNano/ros2_ws/ros2_ws/: frames_2022-11-28_16.42.16.gv  map_1670498933.yaml
jetsonNano/ros2_ws/ros2_ws/src/car_description/: map_premier_etage_belle.pgm  map_premier_etage_belle.yaml
jetsonNano/ros2_ws/src/bt_plugins/: CMakeLists.txt  doc_bt_plugins.md  package.xml
jetsonNano/ros2_ws/src/bt_plugins/include/bt_plugins/: new_bip_action_node.hpp  new_publish_next_pose_node.hpp  new_wait_package_node.hpp
jetsonNano/ros2_ws/src/bt_plugins/plugins/: new_bip_action_node.cpp  new_publish_next_pose_node.cpp  new_wait_package_node.cpp
jetsonNano/ros2_ws/src/bt_plugins/src/: publish_plugins.cpp
jetsonNano/ros2_ws/src/car_description/: CMakeLists.txt  package.xml
jetsonNano/ros2_ws/src/car_description/config/: .ekf.yaml.swp  ekf.yaml  nav2_params.yaml  nav2_params.yaml.save  slam_localization.yaml  test.xml  test2.xml  test_bip.xml  test_plugins.xml  test_waitpackage.xml
jetsonNano/ros2_ws/src/car_description/coor/: coordinates.txt
jetsonNano/ros2_ws/src/car_description/launch/: display.launch.py
jetsonNano/ros2_ws/src/car_description/map/: premieretage2.yaml
jetsonNano/ros2_ws/src/car_description/maps/: carre_blanc.pgm  etage1_secretariat.yaml  fablab  map_1670788881.yaml  map_moche_2eetage.pgm  map_moche_2eetage.yaml  map_premier_etage_belle.yaml  map_premier_etage_belle_nettoyee.pgm  premieretage2.pgm  premieretage2.yaml
jetsonNano/ros2_ws/src/car_description/rviz/: urdf_config.rviz
jetsonNano/ros2_ws/src/car_description/src/: car.urdf  car_description.urdf  car_description.urdf.old  car_description.urdf.old.nez  car_description.urdf.save  car_description.urdf.works
jetsonNano/ros2_ws/src/interfaces/: CMakeLists.txt
jetsonNano/test_bt_plugin/: new_bip_action_node.hpp
nucleoF103/firmware/.metadata/: version.ini
nucleoF103/firmware/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
nucleoF103/firmware/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
nucleoF103/firmware/Debug/: F103.elf  F103.list  F103.map  makefile
nucleoF103/firmware/Debug/Src/: calibrate.su  control.su  main.su
nucleoF103/firmware/Inc/: control.h
nucleoF103/firmware/Release/: makefile  objects.list
nucleoF103/firmware/Release/Src/: subdir.mk
nucleoF103/firmware/Release/Startup/: subdir.mk
nucleoF103/firmware/Src/: calibrate.c  control.c  main.c
nucleoF103/firmwarev3/.metadata/: .log4j.xml  version.ini
nucleoF103/firmwarev3/.metadata/.plugins/org.eclipse.cdt.core/: F103.language.settings.xml  F103_Safe.1670687933396.pdom  F103_Safe.language.settings.xml
nucleoF103/firmwarev3/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
nucleoF103/firmwarev3/F103_Safe/: .cproject  .mxproject  .project  F103_Safe.ioc
raspberryPI3/: test_gpio.py
raspberryPI3/ros2_ws/src/asservissement/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/asservissement/include/asservissement/: asservissement.h  speed_control.h
raspberryPI3/ros2_ws/src/asservissement/src/: asservissement.cpp  direction_control_node.cpp  speed_control_node.cpp
raspberryPI3/ros2_ws/src/brain/: package.xml  setup.py
raspberryPI3/ros2_ws/src/brain/brain/: brain.py
raspberryPI3/ros2_ws/src/can/: CMakeLists.txt
raspberryPI3/ros2_ws/src/comm_app/: package.xml  setup.cfg  setup.py
raspberryPI3/ros2_ws/src/destination/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/detect_package/: package.xml  setup.cfg  setup.py
raspberryPI3/ros2_ws/src/direction_control/: CMakeLists.txt
raspberryPI3/ros2_ws/src/geicar_start/: package.xml
raspberryPI3/ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/joystick/: CMakeLists.txt
raspberryPI3/ros2_ws/src/replay/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/secu/: package.xml  setup.cfg  setup.py
raspberryPI3/ros2_ws/src/set_pos/: package.xml  setup.cfg  setup.py
raspberryPI3/ros2_ws/src/web_interface/: MANIFEST.in  package.xml  setup.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: flask_rclpy.py
templates/: sent.html  welcome.html
(+85 files in other folders)
